<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="Global_var" Id="{2b185a3c-9e5c-4bb8-93ff-3965d297752a}">
    <Declaration><![CDATA[VAR_GLOBAL
	_ARRAY_IP			:ARRAY [1..50] OF STRING; 
	_ARRAY_name_of_var	:ARRAY [1..50] OF STRING(255);
	_ARRAY_var_value	:ARRAY [1..50] OF REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>